parslers-benchmark/src/tests/invalid/semanticErr/function/functionBadReturn.wacc
# function return type mismatch: int <- char

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
	int f() is
		return 'c'
	end
	int x = call f() ;
	println x 
end
	
